# Mnemosyne-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README-NPM.md  README.md  docker-compose.yml  final_verification_test.py  index.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  simple_validation_test.py  stage5_test_report.json  test_validation_fix.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: development.yaml
docs/: GITHUB_SETUP.md  MCP_INTEGRATION_GUIDE.md  SPRINT3_COMPLETION_SUMMARY.md  SPRINT3_FINAL_STATUS.md
docs/DEPLOYMENT/: production-setup.md
docs/DEVELOPEMENT/: API.md  PRD.md  SPRINT0_COMPLETION.md  SPRINT4_OPTIMIZED_GUIDE.md  SPRINT4_OVERVIEW.md  TAB.md  changeset.md  data_schema.md  grpc_atlassian_service.md  mvp_sprint.md
docs/TEST/: TESTING.md  TESTING_REAL_USER.md
examples/: claude_desktop_config.json
proto/: atlassian.proto  mcp.proto
python/: mcp_server.py  requirements.txt
scripts/: ai_agent_integration_test.py  check-python.js  health-check.js  install.js  seed.cypher  test.js  test_mcp_protocol.py  test_mcp_simple.py  verify-sprint0.sh
src/: test_server.py
src/mnemosyne/: __init__.py
src/mnemosyne/api/: __init__.py  main.py
src/mnemosyne/cli/: __init__.py  main.py
src/mnemosyne/clients/: __init__.py  atlassian.py
src/mnemosyne/core/: __init__.py  config.py  logging.py
src/mnemosyne/drivers/: __init__.py  falkordb_driver.py
src/mnemosyne/ecl/: __init__.py  atlassian_loader.py  atlassian_pipeline.py  cognify.py  extract.py  extractor.py  load.py  loader.py  pipeline.py
src/mnemosyne/governance/: models.py
src/mnemosyne/grpc/: __init__.py  atlassian_pb2.py  atlassian_pb2_grpc.py  atlassian_service_simple.py  mcp_server.py  mcp_service.py  server.py
src/mnemosyne/interfaces/: __init__.py  graph_store.py
src/mnemosyne/llm/: __init__.py  base.py
src/mnemosyne/llm/providers/: __init__.py  openai_provider.py
src/mnemosyne/mappers/: __init__.py  atlassian_mapper_simple.py
src/mnemosyne/mcp_adapter/: __init__.py  grpc_bridge.py  server.py  tools.py  utils.py
src/mnemosyne/schemas/: __init__.py  api.py  atlassian.py  constraints.py  core.py  relationships.py
src/mnemosyne_mcp/cli/: governance_cli.py
src/mnemosyne_mcp/governance/: constraint_engine.py  models.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_workflow.py  test_sprint3_demo.py
tests/integration/: test_grpc_server.py  test_openai_integration.py  test_performance.py  test_sprint3_integration.py
tests/mocks/: __init__.py  mcp_atlassian_mock.py
tests/performance/: __init__.py  test_vector_performance.py
tests/poc/: ast_parsing_poc.py  falkordb_capability_poc.py  redis_lock_poc.py
tests/unit/: test_atlassian_client.py  test_atlassian_loader.py  test_atlassian_mapper_simple.py  test_cli.py  test_ecl_cognify.py  test_ecl_extract.py  test_ecl_extractor.py  test_ecl_loader.py  test_ecl_pipeline.py  test_falkordb_driver.py  test_grpc_atlassian_service.py  test_health.py  test_logging.py  test_mcp_atlassian_health.py  test_schemas.py
tests/unit/services/: test_impact_analysis.py  test_search_service.py
